--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,62 @@
 *,*::before,*::after {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#p-note{
+    position: absolute;
+    top: 80%;
 }
 
 body {
     display: flex;
+    flex-direction: column;  
+}
+
+#header {
+    position: absolute;
+    top: 43%;
+    align: center;
+    text-shadow: 0 0 5px white;
+    #margin: 50px;
+}
+
+#main-view {
+    display: flex;
+    height: 100vh;
     flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    white-space: nowarp;
+    overflow: hidden;
+}
+
+#slang {
+    position: absolute;
+    top: 51%;
+    text-shadow: 0 0 5px white;
 }
 
 #background {
     position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    max-width: 100%;
+}
+
+#main-view p{
+    display: relative;
+}
+
+#main-content {
+    width: 100%;
+    background-color: #9bf;
+}
+
+#main-content p{
+    margin: 20px auto;
 }
 
 footer {
